--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-حالياًYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitco93 - v3.0</title>
+    <title>Bitco93 - المطور النهائي</title>
     <style>
-        body { background: #000; color: white; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; height: 100vh; overflow: hidden; display: flex; flex-direction: column; }
+        body { background: #000; color: white; text-align: center; font-family: 'Segoe UI', sans-serif; margin: 0; height: 100vh; overflow: hidden; display: flex; flex-direction: column; }
         .content-area { flex: 1; display: flex; justify-content: center; align-items: center; width: 100%; padding-bottom: 90px; overflow-y: auto; }
-        .tab-content { display: none; width: 100%; flex-direction: column; align-items: center; }
+        .tab-content { display: none; width: 100%; flex-direction: column; align-items: center; padding: 20px 0; }
         .active-tab { display: flex; }
 
-        /* العجلة: ألوان خفيفة جداً وأرقام سوداء واضحة */
+        /* العجلة: ألوان خفيفة وأرقام سوداء */
         .wheel-box { position: relative; width: 260px; height: 260px; margin: 15px auto; }
         #wheel { 
             width: 100%; height: 100%; border-radius: 50%; border: 5px solid #ffd700; position: relative;
@@ -21,29 +21,38 @@
         .pointer { position: absolute; top: -10px; left: 50%; transform: translateX(-50%); width: 0; height: 0; border-left: 15px solid transparent; border-right: 15px solid transparent; border-top: 25px solid #ffd700; z-index: 10; }
 
         /* القائمة السفلية (7 خانات) */
-        .footer { width: 100%; display: flex; justify-content: space-around; background: #111; padding: 10px 0; border-top: 1px solid #ffd700; position: fixed; bottom: 0; }
-        .nav-btn { background: none; border: none; color: #777; font-size: 8px; display: flex; flex-direction: column; align-items: center; flex: 1; cursor: pointer; }
+        .footer { width: 100%; display: flex; justify-content: space-around; background: #111; padding: 10px 0; border-top: 2px solid #ffd700; position: fixed; bottom: 0; }
+        .nav-btn { background: none; border: none; color: #777; font-size: 9px; display: flex; flex-direction: column; align-items: center; flex: 1; cursor: pointer; }
         .nav-btn.active { color: #ffd700; font-weight: bold; }
-        .nav-btn span { font-size: 18px; margin-bottom: 2px; }
+        .nav-btn span { font-size: 20px; margin-bottom: 2px; }
 
-        /* الأزرار والبطاقات */
-        .card { background: #1a1a1a; border-radius: 12px; width: 85%; padding: 15px; border: 1px solid #333; margin-top: 10px; }
+        /* البطاقات والمهام */
+        .card { background: #1a1a1a; border-radius: 12px; width: 90%; padding: 15px; border: 1px solid #333; margin-top: 10px; text-align: right; }
         .btn-action { background: #ffd700; color: #000; border: none; padding: 12px; border-radius: 8px; width: 100%; font-weight: bold; cursor: pointer; margin-top: 10px; }
-        select { background: #222; color: #ffd700; border: 1px solid #ffd700; padding: 8px; border-radius: 5px; width: 100%; margin-top: 5px; }
+        .lock-msg { color: #ff4d4d; font-weight: bold; margin-top: 20px; }
+        .task-item { border-bottom: 1px solid #333; padding: 10px 0; }
+        .task-link { color: #ffd700; text-decoration: none; font-size: 14px; display: block; margin: 5px 0; }
     </style>
 </head>
 <body>
 
 <div class="content-area">
     <div id="home" class="tab-content active-tab">
-        <h1 id="score" style="font-size: 55px; color: #ffd700; margin: 10px 0;">0</h1>
-        <img src="https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/20de4ce6-991a-4d51-8c7b-587442cab07c.png" style="width:180px;" onclick="mine()">
-        <p>⚡ <span id="energy-val">130</span> / 130</p>
+        <div id="mining-section" style="display: none;">
+            <h1 id="score" style="font-size: 55px; color: #ffd700; margin: 10px 0;">0</h1>
+            <img src="https://raw.githubusercontent.com/mhmdyasrshrfthabt-max/Bitco93-Bot/main/20de4ce6-991a-4d51-8c7b-587442cab07c.png" style="width:180px;" onclick="mine()">
+            <p>⚡ <span id="energy-val">130</span> / 130</p>
+        </div>
+        <div id="lock-screen">
+            <h2 style="color: #ffd700;">⚠️ قفل التعدين</h2>
+            <p class="lock-msg">يجب عليك الاشتراك في القناة الرسمية أولاً لتتمكن من جمع العملات.</p>
+            <button class="btn-action" onclick="showTab('tasks', document.querySelectorAll('.nav-btn')[4])">انتقل للمهام للاشتراك</button>
+        </div>
     </div>
 
     <div id="spin" class="tab-content">
-        <h2>عجلة الحظ</h2>
-        <p>المحاولات: <span id="spins-left">0</span></p>
+        <h2>🎡 عجلة الحظ</h2>
+        <p>المحاولات المتاحة: <span id="spins-left">0</span></p>
         <div class="wheel-box">
             <div class="pointer"></div>
             <div id="wheel">
@@ -58,27 +67,46 @@
 
     <div id="games" class="tab-content">
         <h2>🎮 الألعاب</h2>
-        <div class="card"><p>ألعاب (همستر) قريباً!</p></div>
+        <div class="card"><p>ألعاب جديدة قادمة قريباً!</p></div>
     </div>
 
     <div id="friends" class="tab-content">
         <div class="card">
             <h2>👥 الأصدقاء</h2>
-            <h3 id="ref-count-text">الإحالات الحقيقية: <span id="ref-count">0</span></h3>
-            <p style="font-size: 13px;">شارك الرابط: عند انضمام صديق حقيقي تحصل على 1 تدوير.</p>
-            <button onclick="shareLink()" class="btn-action">نسخ رابط المشاركة</button>
+            <h3 style="color:#ffd700;">الإحالات الحقيقية: <span id="ref-count">0</span></h3>
+            <p>احاله واحده = 1 تدوير عجلة</p>
+            <button onclick="copyInvite()" class="btn-action">نسخ رابط الدعوة</button>
         </div>
     </div>
 
     <div id="tasks" class="tab-content">
-        <h2>💰 المهام</h2>
-        <div class="card"><."القناة الرسمية لمشروع Bitco93 على تليجرام 🚀. تابعنا هنا للحصول على آخر التحديثات حول التعدين، ومواعيد سحب الأرباح، والمهام الحصرية لزيادة رصيدك. انضم الآن لتكون جزءاً من مجتمعنا قبل انطلاق العملة!"
-<https://t.me/Bitco93_Bot_Channel></div>
+        <h2>💰 المهام الحصرية</h2>
+        <div class="card">
+            <div class="task-item">
+                <strong>📢 القناة الرسمية لـ Bitco93:</strong>
+                <p style="font-size: 12px; color: #ccc;">تابعنا هنا للحصول على آخر التحديثات حول التعدين، ومواعيد سحب الأرباح، والمهام الحصرية. انضم الآن لتكون جزءاً من مجتمعنا!</p>
+                <a href="https://t.me/Bitco93_Bot_Channel" target="_blank" class="task-link">اضغط هنا للانضمام إلى القناة 🚀</a>
+                <button onclick="verifySub()" class="btn-action" style="padding: 5px;">تحقق من الاشتراك لفتح التعدين</button>
+            </div>
+            
+            <div class="task-item">
+                <strong>📺 قناة اليوتيوب:</strong>
+                <a href="#" class="task-link">قريباً..</a>
+            </div>
+
+            <div class="task-item">
+                <strong>🐦 حساب تويتر (X):</strong>
+                <a href="#" class="task-link">قريباً..</a>
+            </div>
+        </div>
     </div>
 
     <div id="wallet" class="tab-content">
         <h2>👛 المحفظة</h2>
-        <div class="card"><p>الرصيد: <span id="wallet-balance">0</span></p></div>
+        <div class="card">
+            <p>رصيدك الحالي: <span id="wallet-balance">0</span> عملة</p>
+            <button class="btn-action" disabled style="background: #444;">سحب الأرباح (قريباً)</button>
+        </div>
     </div>
 
     <div id="settings" class="tab-content">
@@ -88,9 +116,12 @@
             <select>
                 <option>العربية</option>
                 <option>English</option>
-                <option>Русский</option>
+                <option>Français</option>
             </select>
-            <p>📳 الاهتزاز: <input type="checkbox" checked></p>
+            <div style="margin-top: 15px;">
+                <span>📳 الاهتزاز عند النقر:</span>
+                <input type="checkbox" checked>
+            </div>
         </div>
     </div>
 </div>
@@ -109,6 +140,7 @@
     let score = parseInt(localStorage.getItem('score')) || 0;
     let refs = parseInt(localStorage.getItem('refs')) || 0;
     let usedSpins = parseInt(localStorage.getItem('usedSpins')) || 0;
+    let isSubscribed = localStorage.getItem('isSubscribed') === 'true';
     let energy = 130;
     const rewards = [50, 20, 10, 5, 0, 100, 75, 80];
 
@@ -116,30 +148,49 @@
         document.getElementById('score').innerText = score;
         document.getElementById('wallet-balance').innerText = score;
         document.getElementById('ref-count').innerText = refs;
-        let available = refs - usedSpins;
-        document.getElementById('spins-left').innerText = available;
-        document.getElementById('spin-btn').disabled = (available <= 0);
+        let av = refs - usedSpins;
+        document.getElementById('spins-left').innerText = av;
+        document.getElementById('spin-btn').disabled = (av <= 0);
+
+        if (isSubscribed) {
+            document.getElementById('mining-section').style.display = 'block';
+            document.getElementById('lock-screen').style.display = 'none';
+        }
     }
 
-    function mine() { if(energy > 0) { score++; energy--; updateUI(); localStorage.setItem('score', score); } }
+    function verifySub() {
+        // محاكاة التحقق - سيتم فتح التعدين فور الضغط
+        isSubscribed = true;
+        localStorage.setItem('isSubscribed', 'true');
+        alert("تم التحقق! تم فتح نظام التعدين بنجاح.");
+        updateUI();
+        showTab('home', document.querySelectorAll('.nav-btn')[0]);
+    }
 
-    function shareLink() {
-        const link = "https://t.me/Bitco93_bot?start=" + Math.floor(Math.random()*1000);
+    function mine() {
+        if(isSubscribed && energy > 0) {
+            score++; energy--; updateUI();
+            localStorage.setItem('score', score);
+            if(navigator.vibrate) navigator.vibrate(40);
+        }
+    }
+
+    function copyInvite() {
+        const link = "https://t.me/Bitco93_bot?start=" + Math.floor(Math.random()*9999);
         navigator.clipboard.writeText(link);
-        alert("تم نسخ رابطك! العداد سيزيد عند دخول صديق حقيقي عبر الرابط.");
+        alert("تم نسخ الرابط! شاركه ليقوم أصدقاؤك بالاشتراك.");
     }
 
     function startSpin() {
         if((refs - usedSpins) <= 0) return;
         usedSpins++; localStorage.setItem('usedSpins', usedSpins);
         const wheel = document.getElementById('wheel');
-        const rand = Math.floor(Math.random() * 8) * 45;
-        const total = 3600 + rand;
-        wheel.style.transform = `rotate(${total}deg)`;
+        const deg = 3600 + (Math.floor(Math.random() * 8) * 45);
+        wheel.style.transform = `rotate(${deg}deg)`;
         setTimeout(() => {
-            const idx = Math.floor(((360 - (total % 360)) % 360) / 45);
+            const idx = Math.floor(((360 - (deg % 360)) % 360) / 45);
             score += rewards[idx]; localStorage.setItem('score', score); updateUI();
-            alert("ربحت " + rewards[idx]);
+            alert("فزت بـ " + rewards[idx] + " عملة!");
         }, 4000);
     }
 
